# mangadex-api

./: README.md  pyproject.toml  requirements.txt  setup.py
examples/: async_examples.py  oauth_examples.py  sync_examples.py
mangadex-api/src/mangadex/api/async_api/: client.py
mangadex-api/src/mangadex/api/sync/: client.py
mangadex-api/tests/: test_async_auth.py  test_auth.py
src/mangadex/: __init__.py  constants.py
src/mangadex/api/: __init__.py
src/mangadex/api/async/: __init__.py  auth.py  chapter.py  client.py  custom_list.py  group.py  manga.py  user.py
src/mangadex/api/async_api/: __init__.py  client.py
src/mangadex/api/sync/: auth.py  chapter.py  client.py  custom_list.py  group.py  manga.py  user.py
src/mangadex/models/: __init__.py  auth.py  chapter.py  custom_list.py  group.py  manga.py  user.py
src/mangadex/utils/: __init__.py  exceptions.py  http.py
tests/: test_async_auth.py  test_at_home.py  test_auth.py  test_author.py  test_chapter.py  test_cover.py  test_custom_list.py  test_group.py  test_legacy_mapping.py  test_manga.py  test_tag.py  test_user.py  test_user_me.py
